--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -10,7 +10,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    defaults:
+          run:
+            working-directory: ./app
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x, 15.x]
@@ -21,6 +23,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+        
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
