building after merge

--- a/.github/workflows/packer-check.yml
+++ b/.github/workflows/packer-check.yml
@@ -1,9 +1,7 @@
 name: AWS AMI using Packer Config
 
 on:
-  pull_request:
-    types:
-        - closed
+  push:
     branches:
         - 'main'
 
@@ -31,12 +29,10 @@ jobs:
         with:
           command: init
 
-      # build artifact
-      - name: Build Artifact
+      # validate templates
+      - name: Validate Template
         uses: hashicorp/packer-github-actions@master
         with:
-          command: build
-          arguments: "-color=false -on-error=abort"
+          command: validate
+          arguments: -syntax-only
           target: ami.pkr.hcl
-        env:
-          PACKER_LOG: 1
