--- a/.github/workflows/packer-check.yml
+++ b/.github/workflows/packer-check.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   packer:
     runs-on: ubuntu-latest
-    name: Packer build
+    name: Packer check
 
     steps:
       - name: Checkout Repository
