--- a/app/package.json
+++ b/app/package.json
@@ -16,14 +16,19 @@
     "axios": "^1.3.2",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.0",
+    "crypto": "^1.0.1",
     "chai-http": "^4.3.0",
     "dotenv": "^16.0.3",
     "echo": "^0.1.9",
     "expect": "^29.4.2",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.1.0",
     "regexp": "^1.0.0",
+    "password-validator": "^5.3.0",
+    "request": "^2.88.2",
     "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.6.0",
     "should": "^13.2.3",
     "uuid": "^9.0.0"
   },
@@ -32,6 +37,7 @@
     "jest": "^29.4.2",
     "mocha": "^10.2.0",
     "request": "^2.88.2",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "nodemon": "^2.0.20"
   }
 }
