--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,6 @@
 {
   "name": "web-app",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -37,5 +36,6 @@
     "request": "^2.88.2",
     "supertest": "^6.3.3",
     "nodemon": "^2.0.20"
-  }
+  },
+  "description": ""
 }
