--- a/app/package.json
+++ b/app/package.json
@@ -12,14 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.776.0",
     "bcrypt": "^5.1.0",
     "crypto": "^1.0.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "chai-http": "^4.3.0",
     "dotenv": "^16.0.3",
     "echo": "^0.1.9",
     "expect": "^29.4.2",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "fxa-common-password-list": "0.0.4",
+    "multer": "^1.4.2",
     "mysql2": "^3.1.0",
     "regexp": "^1.0.0",
     "password-validator": "^5.3.0",
@@ -27,6 +32,7 @@
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0",
     "should": "^13.2.3",
+    "payload-validator": "^1.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
