--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
           run:
-            working-directory: ./app
+            working-directory: ./project
     strategy:
       matrix:
         node-version: [16.x]
