--- a/project/package.json
+++ b/project/package.json
@@ -12,36 +12,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.776.0",
+    "aws-sdk": "^2.1326.0",
+    "axios": "^1.3.2",
+    "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.0",
-    "crypto": "^1.0.1",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
     "chai-http": "^4.3.0",
     "dotenv": "^16.0.3",
     "echo": "^0.1.9",
     "expect": "^29.4.2",
     "express": "^4.18.2",
-    "mysql": "^2.18.1",
-    "fxa-common-password-list": "0.0.4",
-    "multer": "^1.4.2",
+    "hot-shots": "^10.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0",
     "regexp": "^1.0.0",
-    "password-validator": "^5.3.0",
-    "request": "^2.88.2",
     "sequelize": "^6.28.0",
-    "sequelize-cli": "^6.6.0",
     "should": "^13.2.3",
-    "payload-validator": "^1.0.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "chai": "^4.3.7",
     "jest": "^29.4.2",
     "mocha": "^10.2.0",
+    "nodemon": "^2.0.20",
     "request": "^2.88.2",
-    "supertest": "^6.3.3",
-    "nodemon": "^2.0.20"
+    "supertest": "^6.3.3"
   },
   "description": ""
 }
